# content-ingestion-windows-client

./: .gitignore  Content-Ingestion-架构分析.md  Content-Ingestion-线1-入口扩展规划.md  PROJECT_PLAN.md  README.md  demo_win_gui.spec  main.py  pyproject.toml  run_gui.py
chrome-extension/: README.md  background.js  manifest.json  options.html  popup.html
docs/: analysis-mode-taxonomy-v1-2026-03-29.md  architecture-2026-03-22.md  changelog-2026-03-22.md  cross-review-2026-03-14.md  entry-expansion-checkpoint-2026-03-27.md  executable-plan-2026-03-16.md  final-handoff-2026-04-11-main-acceptance-and-worktree-cleanup.md  full-chain-check-2026-03-14.md  gui-closeout-2026-03-14.md  gui-convergence-checkpoint-2026-03-14.md  gui-direction-editorial-workspace-2026-03-17.md  monorepo-github-plan-2026-03-15.md  monorepo-migration-checklist-2026-03-15.md  monorepo-root-gitignore-draft-2026-03-15.txt  monorepo-root-readme-draft-2026-03-15.md  phase1-usable-release-2026-03-14.md  preview1-boundary-repair-plan-2026-03-27.md  processing-triage-2026-03-18.md  project-retrospective-and-next-steps-2026-04-11.md  roadmap-2026.md  round2-foundation-2026-03-15.md  session-memory-2026-03-20.md  template-system-v1-implementation-plan-2026-04-02.md  visual-design-spec-revised-2026-03-16.md  visual-design-spec.md  windows-claude-collaboration-contract-2026-04-11.md  windows-wsl-handoff-contract.md  worklog-batch1-batch2-2026-03-28.md  worklog-phase0-boundary-repair-2026-03-28.md  wsl-processing-upper-bound-design-2026-03-28.md
edge-extension/: README.md  background.js  options.html  options.js  popup.html  (+2 more)
(+155 files in other folders)
