[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "content-ingestion-windows-client"
version = "0.1.0"
description = "Windows-side exporter for the content-ingestion shared inbox workflow"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
api = ["fastapi>=0.110,<1", "uvicorn>=0.29,<1"]
browser = ["playwright>=1.50,<2"]
gui = ["PySide6>=6.8,<7"]
video = ["yt-dlp"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
